--- a/public/index.html
+++ b/public/index.html
@@ -1,161 +1,227 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge; chrome=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LOFTYROOMS</title>
+    <meta
+      name="description"
+      content="LoftyRooms is a leading provider of luxury accommodations and hospitality services. We offer a wide range of premium lodging options and personalized guest experiences, ensuring a memorable stay for our clients. Whether you're seeking a tranquil escape in a scenic location or a luxurious urban retreat, LoftyRooms provides a curated selection of properties to meet your unique needs. Our dedicated team is committed to delivering exceptional hospitality and exceeding our guests' expectations. At LoftyRooms, we are passionate about creating extraordinary experiences in the world of hospitality."
+    />
+    <meta
+      name="keywords"
+      content="LoftyRooms,Pakistan oyorooms, Pakistan Hotels, Lahore hotels, Lahore rooms, luxury accommodations, premium lodging, hospitality services, personalized guest experiences, tranquil escapes, urban retreats, memorable stays, extraordinary hospitality, curated properties, exceptional guest experiences"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge; chrome=1" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LOFTYROOMS</title>
-  <meta name="description"
-    content="LoftyRooms is a leading provider of luxury accommodations and hospitality services. We offer a wide range of premium lodging options and personalized guest experiences, ensuring a memorable stay for our clients. Whether you're seeking a tranquil escape in a scenic location or a luxurious urban retreat, LoftyRooms provides a curated selection of properties to meet your unique needs. Our dedicated team is committed to delivering exceptional hospitality and exceeding our guests' expectations. At LoftyRooms, we are passionate about creating extraordinary experiences in the world of hospitality." />
-  <meta name="keywords"
-    content="LoftyRooms,Pakistan oyorooms, Pakistan Hotels, Lahore hotels, Lahore rooms, luxury accommodations, premium lodging, hospitality services, personalized guest experiences, tranquil escapes, urban retreats, memorable stays, extraordinary hospitality, curated properties, exceptional guest experiences" />
+    <link rel="manifest" href="./manifest.json" />
 
-  <link rel="manifest" href="./manifest.json" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Varela+Round"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <!-- css file link -->
+    <link rel="stylesheet" href="assets/css/all.css" />
+    <link rel="stylesheet" href="assets/css/animate.css" />
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Varela+Round" />
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <!-- css file link -->
-  <link rel="stylesheet" href="assets/css/all.css" />
-  <link rel="stylesheet" href="assets/css/animate.css" />
-
-  <link rel="shortcut icon" href="./logo.png" type="image/x-icon" />
-  <!-- <link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
+    <link rel="shortcut icon" href="./logo.png" type="image/x-icon" />
+    <!-- <link rel="apple-touch-icon" type="image/x-icon" href="img/apple-touch-icon-57x57-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="img/apple-touch-icon-72x72-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="img/apple-touch-icon-114x114-precomposed.png">
     <link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="img/apple-touch-icon-144x144-precomposed.png"> -->
 
-  <!-- GOOGLE WEB FONT -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
-    rel="stylesheet" />
+    <!-- GOOGLE WEB FONT -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet" />
-  <link href="css/bs-icon-font/bootstrap-icons.css" rel="stylesheet" />
-  <link href="css/style.css" rel="stylesheet" />
-  <link href="css/vendors.min.css" rel="stylesheet" />
+    <!-- CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bs-icon-font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/vendors.min.css" rel="stylesheet" />
 
-  <!-- YOUR CUSTOM CSS -->
-  <link href="css/custom.css" rel="stylesheet" />
-  <!-- bootstrap 5 -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <!-- YOUR CUSTOM CSS -->
+    <link href="css/custom.css" rel="stylesheet" />
+    <!-- bootstrap 5 -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
-  <!-- box-icon -->
-  <link rel="stylesheet" href="assets/css/boxicons.min.css" />
+    <!-- box-icon -->
+    <link rel="stylesheet" href="assets/css/boxicons.min.css" />
 
-  <!-- bootstrap icon -->
-  <link rel="stylesheet" href="assets/css/bootstrap-icons.css" />
+    <!-- bootstrap icon -->
+    <link rel="stylesheet" href="assets/css/bootstrap-icons.css" />
 
-  <!-- swiper-slide -->
-  <link rel="stylesheet" href="assets/css/swiper-bundle.css" />
+    <!-- swiper-slide -->
+    <link rel="stylesheet" href="assets/css/swiper-bundle.css" />
 
-  <!-- nice-select -->
-  <link rel="stylesheet" href="assets/css/nice-select.css" />
+    <!-- nice-select -->
+    <link rel="stylesheet" href="assets/css/nice-select.css" />
 
-  <!-- magnefic popup css -->
-  <link rel="stylesheet" href="assets/css/magnific-popup.css" />
+    <!-- magnefic popup css -->
+    <link rel="stylesheet" href="assets/css/magnific-popup.css" />
 
-  <!-- odometer css -->
-  <link rel="stylesheet" href="assets/css/odometer.css" />
+    <!-- odometer css -->
+    <link rel="stylesheet" href="assets/css/odometer.css" />
 
-  <!-- style css -->
-  <link rel="stylesheet" href="assets/css/datepicker.min.css" />
+    <!-- style css -->
+    <link rel="stylesheet" href="assets/css/datepicker.min.css" />
 
-  <!-- style css -->
-  <link rel="stylesheet" href="assets/css/uiicss.css" />
+    <!-- style css -->
+    <link rel="stylesheet" href="assets/css/uiicss.css" />
 
-  <!-- style css -->
-  <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- style css -->
+    <link rel="stylesheet" href="assets/css/style.css" />
 
-  <!-- css file link -->
-  <link rel="stylesheet" href="assets/css/all.css" />
-  <link rel="stylesheet" href="assets/css/animate.css" />
+    <!-- css file link -->
+    <link rel="stylesheet" href="assets/css/all.css" />
+    <link rel="stylesheet" href="assets/css/animate.css" />
 
-  <!-- bootstrap 5 -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <!-- bootstrap 5 -->
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
-  <!-- box-icon -->
-  <link rel="stylesheet" href="assets/css/boxicons.min.css" />
+    <!-- box-icon -->
+    <link rel="stylesheet" href="assets/css/boxicons.min.css" />
 
-  <!-- bootstrap icon -->
-  <link rel="stylesheet" href="assets/css/bootstrap-icons.css" />
+    <!-- bootstrap icon -->
+    <link rel="stylesheet" href="assets/css/bootstrap-icons.css" />
 
-  <!-- swiper-slide -->
-  <link rel="stylesheet" href="assets/css/swiper-bundle.css" />
+    <!-- swiper-slide -->
+    <link rel="stylesheet" href="assets/css/swiper-bundle.css" />
 
-  <!-- nice-select -->
-  <link rel="stylesheet" href="assets/css/nice-select.css" />
+    <!-- nice-select -->
+    <link rel="stylesheet" href="assets/css/nice-select.css" />
 
-  <!-- magnefic popup css -->
-  <link rel="stylesheet" href="assets/css/magnific-popup.css" />
-  <!-- -------slide0------ -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- -------slide0------ -->
-  <!-- animate css -->
-  <!-- <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css" /> -->
+    <!-- magnefic popup css -->
+    <link rel="stylesheet" href="assets/css/magnific-popup.css" />
+    <!-- -------slide0------ -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- -------slide0------ -->
+    <!-- animate css -->
+    <!-- <link rel="stylesheet" href="assets/css/jquery.fancybox.min.css" /> -->
 
-  <!-- odometer css -->
-  <link rel="stylesheet" href="assets/css/odometer.css" />
+    <!-- odometer css -->
+    <link rel="stylesheet" href="assets/css/odometer.css" />
 
-  <!-- style css -->
-  <link rel="stylesheet" href="assets/css/datepicker.min.css" />
+    <!-- style css -->
+    <link rel="stylesheet" href="assets/css/datepicker.min.css" />
 
-  <!-- style css -->
-  <link rel="stylesheet" href="assets/css/uiicss.css" />
+    <!-- style css -->
+    <link rel="stylesheet" href="assets/css/uiicss.css" />
 
-  <!-- style css -->
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <!-- -------slide0------ -->
-  <script>
-    const buttons = document.querySelectorAll(".btn");
+    <!-- style css -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- -------slide0------ -->
+    <script>
+      const buttons = document.querySelectorAll(".btn");
 
-    buttons.forEach((button) => {
-      button.addEventListener("click", () => {
-        buttons.forEach((btn) => btn.classList.remove("active"));
-        button.classList.add("active");
+      buttons.forEach((button) => {
+        button.addEventListener("click", () => {
+          buttons.forEach((btn) => btn.classList.remove("active"));
+          button.classList.add("active");
+        });
       });
-    });
-  </script>
-  <!-- -------slide0------ -->
-  <script>
-    var wa_btnSetting = {
-      btnColor: "#272a61",
-      ctaText: "",
-      cornerRadius: 40,
-      marginBottom: 10,
-      marginLeft: 10,
-      btnPosition: "left",
-      whatsAppNumber: "92447688477",
-      welcomeMessage: "LoftyRoom! Booking the room.........",
-      zIndex: 999999,
-      btnColorScheme: "light",
-    };
-    window.onload = () => {
-      _waEmbed(wa_btnSetting);
-    };
-  </script>
-</head>
+    </script>
+    <!-- -------slide0------ -->
+    <script>
+      var wa_btnSetting = {
+        btnColor: "#272a61",
+        ctaText: "",
+        cornerRadius: 40,
+        marginBottom: 10,
+        marginLeft: 10,
+        btnPosition: "left",
+        whatsAppNumber: "92447688477",
+        welcomeMessage: "LoftyRoom! Booking the room.........",
+        zIndex: 999999,
+        btnColorScheme: "light",
+      };
+      window.onload = () => {
+        _waEmbed(wa_btnSetting);
+      };
+    </script>
+    <!-- Meta Pixel Code -->
+    <script>
+      !(function (f, b, e, v, n, t, s) {
+        if (f.fbq) return;
+        n = f.fbq = function () {
+          n.callMethod
+            ? n.callMethod.apply(n, arguments)
+            : n.queue.push(arguments);
+        };
+        if (!f._fbq) f._fbq = n;
+        n.push = n;
+        n.loaded = !0;
+        n.version = "2.0";
+        n.queue = [];
+        t = b.createElement(e);
+        t.async = !0;
+        t.src = v;
+        s = b.getElementsByTagName(e)[0];
+        s.parentNode.insertBefore(t, s);
+      })(
+        window,
+        document,
+        "script",
+        "https://connect.facebook.net/en_US/fbevents.js"
+      );
+      fbq("init", "1391788154878076");
+      fbq("track", "PageView");
+    </script>
+    <noscript
+      ><img
+        height="1"
+        width="1"
+        style="display: none"
+        src="https://www.facebook.com/tr?id=1391788154878076&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
+  </head>
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
 
-  <!--
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -165,13 +231,19 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  <!-- ------------------Wathsapp -->
+    <!-- ------------------Wathsapp -->
 
-  <script defer src="https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js"></script>
+    <script
+      defer
+      src="https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js"
+    ></script>
 
-  <!-- cdn's -->
-  <script defer="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-  <script defer="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-</body>
-
+    <!-- cdn's -->
+    <script
+      defer="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    ></script>
+    <script
+      defer="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    ></script>
+  </body>
 </html>
