loader, phone num, links added, styling bug fixes

--- a/public/index.html
+++ b/public/index.html
@@ -170,8 +170,8 @@
         marginBottom: 10,
         marginLeft: 10,
         btnPosition: "left",
-        whatsAppNumber: "92447688477",
-        welcomeMessage: "LoftyRoom! Booking the room.........",
+        whatsAppNumber: "923330445494",
+        welcomeMessage: "Hello LoftyRooms, I am a future customer",
         zIndex: 999999,
         btnColorScheme: "light",
       };
